--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,8 +3,12 @@ name: Deploy Docs
 on:
   push:
     branches:
-      # make sure this is the branch you are using
       - main
+
+permissions:
+  pull-requests: write
+  issues: write
+  repository-projects: write
 
 jobs:
   deploy-gh-pages:
