--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,9 +6,8 @@ on:
       - main
 
 permissions:
-  pull-requests: write
-  issues: write
-  repository-projects: write
+  contents: read
+  pages: write 
 
 jobs:
   deploy-gh-pages:
