--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@vuepress/client": "^2.0.0-beta.45",
+    "reveal.js": "^5.0.2",
     "vue": "^3.2.33",
     "vuepress": "^2.0.0-beta.45",
     "vuepress-plugin-copy-code2": "^2.0.0-beta.103",
